# gp-plugin-control-bus

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
GPCB_GithubSDK/: .clang-format  CMakeLists.txt  CMakeLists_localSDK.txt  README.md
GPCB_GithubSDK/src/: GPScriptFunctions.h  LibMain.cpp  LibMain.h  version.h
GPCB_localSDK/: README.md
GPCB_localSDK/gpcb/: CMakeLists.txt  GPScriptFunctions.h  LibMain.cpp  LibMain.h  build-debug.cmd  build.cmd  version.h.in
GPCB_localSDK/gpcb/cmake/: dependencies.cmake  juce-shared-library.cmake
GPCB_localSDK/gpcb/gpcb/: version.h
GPCB_localSDK/gpcb/gpsdk/interfaces/C/: GPTypes.h  exports.h  imports.c
GPCB_localSDK/gpcb/gpsdk/interfaces/CPP/: GPMidiMessages.cpp  GigPerformerFunctions.cpp  entry.cpp
GPCB_localSDK/gpcb/src/: GPScriptFunctions.h  LibMain.cpp  LibMain.h  LogWindow.cpp  LogWindow.h  MultiAsyncUpdater.h
GPCB_localSDK/interfaces/C/: imports.h
GPCB_localSDK/interfaces/CPP/: GigPerformerAPI.h  GigPerformerFunctions.h
GP_SDK_v61_examples/cpp/HelloGP-JUCE/: HelloGP-JUCE.jucer
GP_SDK_v61_examples/cpp/HelloGP-JUCE/Builds/MacOSX/: deployExtension.sh
GP_SDK_v61_examples/cpp/HelloGP-JUCE/Source/: LibMain.h
GP_SDK_v61_examples/cpp/hellogp/: LibMain.cpp  LibMain.h
GP_SDK_v61_examples/cpp/hellogp2/: CMakeLists.txt  LibMain.cpp  LibMain.h
src/: GPScriptFunctions.h  LibMain.cpp  LibMain.h  version.h  version.h.in
